--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# Benchmark data files
+bench/*.dat
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build
 
 # Dependency directory
 # Deployed apps should consider commenting this line out:
