--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
 
   "devDependencies": {
+    "byline": "^4.1.1",
     "expectations": "*",
+    "from": "^0.1.3",
     "mocha": "*",
     "sinon": "*"
   },
