--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
 
   "devDependencies": {
     "byline": "^4.1.1",
-    "expectations": "*",
+    "expectations": "^0.2.5",
     "from": "^0.1.3",
-    "mocha": "*",
-    "sinon": "*"
+    "mocha": "^1.18.2",
+    "optimist": "^0.6.1",
+    "sinon": "^1.9.1"
   },
 
   "homepage": "https://github.com/simonratner/node-alloc",
