--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "byline": "^4.1.1",
     "expectations": "^0.2.5",
     "from": "^0.1.3",
+    "measured": "^0.1.6",
     "mocha": "^1.18.2",
     "optimist": "^0.6.1",
     "sinon": "^1.9.1"
